Fix undefined behavior in qRgba().

Shifting a signed integer that overflows is undefined behavior. All
masks were changed to unsigned in qRgb and qRgba. While the alpha value
is enough to fix the undefined behavior, Visual C++ generates slow
code if not all of those constants are unsigned.

Change-Id: Ia0ec3e9464088495173b4ad9c2e37a49e6f8e987
Task-number: QTBUG-49595
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 837b5d458970f3981859cb9dfa0cec5fcd6d0c4f https://github.com/qt/qtbase/commit/837b5d458970f3981859cb9dfa0cec5fcd6d0c4f